--- a/styles.css
+++ b/styles.css
@@ -237,10 +237,12 @@ body {
   }
   .app-container .history table tbody tr td {
     font-size: 12px !important;
-    padding: 3px;
   }
   .app-container .history table tbody tr td:nth-child(2) {
     white-space: nowrap;
+  }
+  .app-container .history table tbody tr td:nth-child(3) {
+    padding-left: 6px;
   }
   .app-container .history table tbody tr td.table-padding {
     display: none;
