--- a/styles.scss
+++ b/styles.scss
@@ -14,6 +14,11 @@ body {
   justify-content: center;
   align-items: center;
   padding: 50px 50px 25px;
+  &::before, &::after{
+    width: 100%;
+    content: '';
+    order: 1;
+  }
   .link {
     text-transform: uppercase;
     color: $button-color;
@@ -24,6 +29,7 @@ body {
     }
   }
   .pay-container {
+    order: 1;
     position: relative;
     display: flex;
     flex-flow: column;
@@ -114,6 +120,7 @@ body {
   }
   .history {
     margin-top: 30px;
+    max-width: 1200px;
     border-radius: 5px;
     background-color: #ffffff;
     box-shadow: 0 5px 37.2px 2.8px rgba(0, 0, 0, 0.05);
@@ -121,6 +128,7 @@ body {
     display: flex;
     flex-flow: column;
     align-items: center;
+    order: 2;
     h2 {
       text-transform: uppercase;
       color: $text-color;
