--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ body {
   box-sizing: border-box;
   align-items: center;
   height: 450px;
+  width: 30%;
   max-width: 400px;
   min-width: 290px;
   background: #fff;
