--- a/styles.scss
+++ b/styles.scss
@@ -208,6 +208,7 @@ body {
       font-size: 14px;
     }
     .pay-container{
+      padding: 15px 15px 45px;
       h3{
         font-size: 16px;
       }
